--- a/crates/putils/Cargo.toml
+++ b/crates/putils/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "putils"
-version = "0.0.2"
+version = "0.0.3"
 description = "Utilities for writing Solana programs with the pinocchio framework"
 keywords = ["solana", "pinocchio"]
+documentation = "https://docs.rs/putils/latest/putils/"
 readme = "../../README.md"
 edition.workspace = true
 license.workspace = true
